# k230_flash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  build_cli.yml
src/cli/: CMakeLists.txt  k230_flash.cpp
src/kburn/: CMakeLists.txt  kburn.cpp  kdimage.cpp
src/kburn/burner_k230/: burner.cpp  burner_brom.cpp  burner_uboot.cpp  probe_device.cpp
src/kburn/cli/: CMakeLists.txt  k230_flash.cpp
src/kburn/cli/cmake/: copy_dlls.sh  mingw-toolchain.cmake
src/kburn/include/: kburn.h  kdimage.h  version_info.h.in
src/kburn/include/k230/: kburn_k230.h
src/python/kburn/native/: CMakeLists.txt  ffi.cpp
tests/import/: test_import.py
