[project]
name = "k230_flash"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [{ name = "kendryte747" }, { email = "kendryte747@gmail.com" }]
maintainers = [{ name = "kendryte747" }, { email = "kendryte747@gmail.com" }]
readme = "README.md"
description = "Kendryte K230 Flash Tool"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
keywords = ["kendryte", "kflash", "k230"]
dependencies = []

[project.urls]
homepage = "https://github.com/kendryte747/k230_flash_py"

[project.scripts]
k230_flash = "kburn.k230_flash:main"

[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
#build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "cp313"]
build = ["cp38*"]
skip = "*musllinux*"

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = [
    "yum install -y libudev-devel",
]

[tool.cibuildwheel.macos]
archs = ["x86_64"]
before-all = [
    "brew install fmt",
]
