[project]
name = "k230_flash"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [{ name = "kendryte747" }, { email = "kendryte747@gmail.com" }]
maintainers = [{ name = "kendryte747" }, { email = "kendryte747@gmail.com" }]
readme = "README.md"
description = "Kendryte K230 Flash Tool"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
keywords = ["kendryte", "kflash", "k230"]
dependencies = []

[project.urls]
homepage = "https://github.com/kendryte/k230_flash"

[project.scripts]
k230_flash = "kburn.k230_flash:main"

[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
#build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "cp313"]
build = ["cp310*",  "cp312*"]
skip = "*musllinux*"
test-requires = "pytest"
test-command = [
  "pytest {project}/tests/import"
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = [
    "yum install -y libudev-devel",
]
repair-wheel-command = "LD_LIBRARY_PATH=/usr/lib auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["x86_64"]
before-all = [
    "brew install fmt",
]
